--- a/package.json
+++ b/package.json
@@ -16,5 +16,11 @@
         "lodash": "^4.17.19",
         "postcss": "^8.4.49",
         "tailwindcss": "^3.4.15"
+    },
+    "dependencies": {
+        "@popperjs/core": "^2.11.8",
+        "bootstrap": "^5.3.3",
+        "sass": "^1.81.0",
+        "sass-loader": "^16.0.3"
     }
 }
