Added vehicle maintenance

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,5 @@
 {
+    "/assets/css/app.css": "/assets/css/app.css",
     "/assets/css/sb-admin-2.min.css": "/assets/css/sb-admin-2.min.css",
-    "/assets/css/sb-admin-2.css": "/assets/css/sb-admin-2.css",
-    "/assets/css/app.css": "/assets/css/app.css"
+    "/assets/css/sb-admin-2.css": "/assets/css/sb-admin-2.css"
 }
