--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "tailwindcss": "^3.4.15"
     },
     "dependencies": {
+        "@ckeditor/ckeditor5-build-classic": "^43.3.1",
         "@popperjs/core": "^2.11.8",
         "bootstrap": "^5.3.3",
         "sass": "^1.81.0",
