--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "@ckeditor/ckeditor5-build-classic": "^43.3.1",
         "@popperjs/core": "^2.11.8",
         "bootstrap": "^5.3.3",
+        "puppeteer": "^23.8.0",
         "sass": "^1.81.0",
         "sass-loader": "^16.0.3"
     }
