--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "intervention/image": "^2.7",
         "laravel/framework": "^9.0",
         "laravel/sanctum": "^2.14",
-        "laravel/tinker": "^2.7"
+        "laravel/tinker": "^2.7",
+        "stripe/stripe-php": "^16.3"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.14",
